k8s_manifest/test-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-db
spec:
  selector:
    matchLabels:
      appdb: testdb
  replicas: 1
  template:
    metadata:
      labels:
        appdb: testdb
    spec:
      containers:
      - name: test-db
        image: k8sappdemoacr.azurecr.io/mongo:v1
        ports:
        - containerPort: 27017
