k8s_manifest/test-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
spec:
  selector:
    matchLabels:
      app: test
  replicas: 1
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - name: test-app
        image: k8sappdemoacr.azurecr.io/k8s-app:v2
        ports:
        - containerPort: 5000
          name: web-port
        imagePullPolicy: Always
