k8s_manifest/aks_lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: test
  annotations:
        service.beta.kubernetes.io/azure-load-balancer-resource-group: cloud-ops
spec:
  selector:
    app: test
  ports:
  - port: 5000
    targetPort: 5000
  type: LoadBalancer
  loadBalancerIP: 52.142.5.212
