k8s_manifest/test-web-ingresssvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: test
  labels:
    apps: test
spec:
  ports:
  - name: tcp-5000
    port: 5000
    targetPort: 5000
    protocol: TCP
  selector:
    app: test
